// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResponsiveImage /> \`render\` by default should have the right structure 1`] = `
<figure
  className="responsive-image"
>
  <img
    id="image"
  />
</figure>
`;

exports[`<ResponsiveImage /> \`render\` if \`props.hasRoundedCorners\` is passed should have the right structure 1`] = `
<figure
  className="responsive-image is-rounded"
>
  <img
    id="image"
  />
</figure>
`;

exports[`<ResponsiveImage /> \`render\` if \`props.isCircular\` is passed should have the right structure 1`] = `
<figure
  className="responsive-image is-circular"
>
  <img
    id="image"
  />
</figure>
`;

exports[`<ResponsiveImage /> \`render\` if \`props.isFluid\` is passed should have the right structure 1`] = `
<figure
  className="responsive-image is-fluid"
>
  <img
    id="image"
  />
</figure>
`;

exports[`<ResponsiveImage /> \`render\` if \`props.isLazyLoaded\` is false should have the right structure 1`] = `
<figure
  className="responsive-image"
>
  <img
    id="image"
  />
</figure>
`;

exports[`<ResponsiveImage /> \`render\` if \`props.label\` is passed should have the right structure 1`] = `
<figure
  className="responsive-image"
>
  <img
    id="image"
  />
  <Paragraph
    isCompact={false}
    size="medium"
    weight={null}
  >
    🔷
  </Paragraph>
</figure>
`;

exports[`<ResponsiveImage /> \`render\` if \`props.placeholderImageUrl\` is passed should have the right structure 1`] = `
<figure
  className="responsive-image has-placeholder"
>
  <img
    id="image"
  />
  <img
    id="placeholderImage"
  />
</figure>
`;

exports[`<ResponsiveImage /> should get wrapped by \`withLazyLoad\` 1`] = `
<withLazyLoad(ResponsiveImage)
  isLazyLoaded={true}
>
  <LazyLoader
    componentProps={
      Object {
        "isLazyLoaded": true,
      }
    }
    lazyProps={
      Object {
        "imageUrl": undefined,
        "srcSet": undefined,
      }
    }
  >
    <div />
    <ResponsiveImage
      hasRoundedCorners={false}
      imageHeight={null}
      imageTitle="Image Title"
      imageUrl=""
      imageWidth={null}
      isAvatar={false}
      isCircular={false}
      isFluid={false}
      isLazyLoaded={true}
      label={null}
      sizes={null}
      srcSet={null}
    >
      <figure
        className="responsive-image"
      >
        <img
          id="image"
        />
      </figure>
    </ResponsiveImage>
    <div />
  </LazyLoader>
</withLazyLoad(ResponsiveImage)>
`;
